tests/trybuild/views/comma_alone.stderr
error: no rules expected the token `,`
 --> tests/trybuild/views/comma_alone.rs:3:21
  |
3 | type Views = Views!(,);
  |                     ^ no rules expected this token in macro call
