tests/trybuild/views/comma_alone.rs
use brood::query::Views;

type Views = Views!(,);

fn main() {}
